local storage stores history, input field cleared after entered

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <label for="title"></label>
+    <input id="title" name='title' type="text">
+    <button>Search</button>
 
     <script src="js/main.js"></script>
 </body>
