starting style for results list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
     <label for="title"></label>
     <input id="title" name='title' type="text">
     <button>Search</button>
+    <section id="results">
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <p>
+                    <span></span><!--comment--><span></span>
+                </p>
+            </section>
+        </section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+        <section class="item"></section>
+    </section>
 
     <script src="js/main.js"></script>
 </body>
