ignore proper files

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <section class="item"></section>
     </section>
 
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
