--- a/index.html
+++ b/index.html
@@ -15,20 +15,82 @@
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
-                <p>
-                    <span></span><!--comment--><span></span>
-                </p>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
             </section>
         </section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
-        <section class="item"></section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
+        <section class="item">
+            <img src="" alt="movie poster">
+            <section class="movieInfo">
+                <h2 class="title"></h2>
+                <span class="type"></span><!--comment-->
+                <span class="year"></span>
+            </section>
+        </section>
     </section>
 
     <script type="module" src="js/main.js"></script>
