css placement functional, bug: no title or type

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <section class="item">
             <img src="" alt="movie poster">
             <section class="movieInfo">
-                <h2 class="title"></h2>
-                <span class="type"></span><!--comment-->
-                <span class="year"></span>
+                <h2 class="title">title</h2>
+                <span class="type">movie/series</span><!--comment-->
+                <span class="year">year</span>
             </section>
         </section>
         <section class="item">
