hidden css works, bug: first fetch has 4 results, second fetch only shows 5 thru 10

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input id="title" name='title' type="text">
     <button>Search</button>
     <section id="results">
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title">title</h2>
@@ -19,7 +19,7 @@
                 <span class="year">year</span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -27,7 +27,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -35,7 +35,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -43,7 +43,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -51,7 +51,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -59,7 +59,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -67,7 +67,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -75,7 +75,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
@@ -83,7 +83,7 @@
                 <span class="year"></span>
             </section>
         </section>
-        <section class="item">
+        <section class="item hidden">
             <img src="" alt="movie poster">
             <section class="movieInfo">
                 <h2 class="title"></h2>
