creating html layout to be hidden until details call made, bug: body.style.backgroundImage is undefined

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             </section>
         </section>
     </section>
+    <section id="details">
+        
+    </section>
 
     <script type="module" src="js/main.js"></script>
 </body>
