html for click fetch set, needs css and js

--- a/index.html
+++ b/index.html
@@ -93,7 +93,28 @@
         </section>
     </section>
     <section id="details">
-        
+        <h1 class="title"></h1>
+        <h4 class="awards hidden"></h4>
+        <section class="genre ratings">
+            <div class="rating"> from <span class="votes"> votes</span>
+            </div>
+            <div class="rated">
+
+            </div>
+            <div class="genre">
+
+            </div>
+            <div class="runtime">
+
+            </div>
+            <div class="seasons">
+
+            </div>
+        </section>
+        <section class="actors plot">
+            <p class="actors"></p>
+            <p class="plot"></p>
+        </section>
     </section>
 
     <script type="module" src="js/main.js"></script>
