sections created for second fetch (3rd and 4th function), need style for second fetchs

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
     <section id="details">
         <h1 class="title"></h1>
         <h4 class="awards hidden"></h4>
-        <section class="genre ratings">
-            <div class="rating"> from <span class="votes"> votes</span>
+        <section>
+            <div class="rating">
+
             </div>
             <div class="rated">
 
@@ -111,7 +112,7 @@
 
             </div>
         </section>
-        <section class="actors plot">
+        <section>
             <p class="actors"></p>
             <p class="plot"></p>
         </section>
