functionality working, styling needed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </section>
         </section>
     </section>
-    <section id="details">
+    <section id="details" class="hidden">
         <h1 class="title"></h1>
         <h4 class="awards hidden"></h4>
         <section>
