trouble with add/remove evLis, getting there

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     </section>
     <section id="details" class="hidden">
         <h1 class="title"></h1>
-        <h4 class="awards hidden"></h4>
         <section>
+            <h4 class="awards hidden"></h4>
             <div class="rating">
 
             </div>
@@ -113,7 +113,9 @@
             </div>
         </section>
         <section>
+            <label for="actors">Actors: </label>
             <p class="actors"></p>
+            <label for="plot">Plot: </label>
             <p class="plot"></p>
         </section>
     </section>
